metadata/force-app/main/default/objects/CustomName_xtJae__c/CustomName_xtJae__c.object-meta.xml
<CustomObject>
    <description>Description_Auyyh</description>
    <label>CustomLabel_IpSre</label>
    <nameField>
        <label>CustomLabel_IpSre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_IpSres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>