metadata/force-app/main/default/objects/CustomName_xtJae__c/fields/CustomField_Nwkcb__c.field-meta.xml
<CustomField>
    <fullName>CustomField_Nwkcb__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFielddDjCh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>