metadata/force-app/main/default/objects/CustomName_xtJae__c/fields/CustomField_TbyKO__c.field-meta.xml
<CustomField>
    <fullName>CustomField_TbyKO__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFielddPgcy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>